Add missing Prisma dependencies

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install && npm run build && npx prisma migrate deploy && npx prisma generate"
+  command = "npm install && npm run build"
   publish = "public"
   functions = "netlify/functions"
   base = "/"
